styles/widgets/common/switch.less
.dx-switch {
    display: inline-block;
    cursor: pointer;
    .user-select(none);
    .user-drag(none);
}

.dx-switch-wrapper {
    display: inline-block;
    text-align: left;
    height: 100%;
    width: 100%;

    &:before {
        display: inline-block;
        height: 100%;
        content: '';
        vertical-align: middle;
    }
}

.dx-switch-inner {
    display: flex;
}
.dx-switch-container {
    display: inline-block;
    overflow: hidden;
    width: 100%;
    height: 100%;
    vertical-align: middle;
}

.dx-state-disabled {
    &.dx-switch, .dx-switch {
        cursor: default;
    }
}

.dx-switch-inner {
    transform: translateX(calc(-50%));
}

.dx-switch-handle {
    transform: translateX(calc(0%));
}

.dx-switch-on-value {
    .dx-switch-inner {
        transform: translateX(calc(0%));
    }

    .dx-switch-handle {
        transform: translateX(calc(-100%));
    }
}
.dx-rtl {
    &.dx-switch-wrapper, .dx-switch-wrapper {
        text-align: right;
    }

    .dx-switch-inner {
        transform: translateX(calc(50%));
    }

    .dx-switch-handle {
        transform: translateX(calc(-100%));
    }

    &.dx-switch-on-value {
        .dx-switch-inner {
            transform: translateX(calc(0%));
        }

        .dx-switch-handle {
            transform: translateX(calc(0%));
        }
    }
}

